--- a/Pandas_&_Covid_19.ipynb
+++ b/Pandas_&_Covid_19.ipynb
@@ -6435,10 +6435,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "http://zbl.us/RZfZ7"
+      ],
+      "metadata": {
+        "id": "3l4VtngqzqPW"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Ifpkr_KRwmig"
+        "id": "4KXPa8hzzrSQ"
       },
       "execution_count": null,
       "outputs": []
